chore: upgrade prettier config; use prettier-ignore file

--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
     "release-notes": "node scripts/printReleaseNotesTemplate.js",
     "versions": "node scripts/normalizeDependencyVersions.js",
     "normalize-pkgfields": "node scripts/normalizePackageFields.js",
-    "prettify": "lerna run clean && npm run prettier -- --write",
-    "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
+    "check-git-status": "[ -z \"$(git status --porcelain)\" ] || (echo \"Commit first\" && exit 1)",
+    "prettify": "npm run check-git-status && npx prettier -cwu *",
     "lint-next": "npm run eslint -- `git diff --name-only next --diff-filter ACMRTUXB`",
-    "verify-format": "lerna run clean && npm run prettier -- -c",
+    "verify-format": "lerna run clean && prettier -cu *",
     "postinstall": "node ./scripts/validateMonorepoDependencies.js && npm run bootstrap",
     "vercel-build": "npm run build:js && cd dev/test-studio && npm run build -- -y",
     "type-check": "tsc -b --force",
@@ -94,7 +94,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-es5": "^1.4.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.2",
     "execa": "^2.0.0",
