chore: update eslint config

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,15 +1,8 @@
-/dev/*/node_modules
-/dev/*/dist
-/examples/*/node_modules
-/examples/*/dist
-/packages/*/node_modules
-/packages/@sanity/*/node_modules
-/packages/*/dist
-/packages/@sanity/*/dist
-/packages/*/lib
-/packages/*/coverage
-/packages/@sanity/*/lib
-/packages/@sanity/*/coverage
+**/dist
+**/node_modules
+**/lib
+**/coverage
+**/bin
 /packages/@sanity/client/umd
 /packages/@sanity/cli/bin/sanity-cli.js
 *.json
