--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ jspm_packages
 # Optional npm cache directory
 .npm
 
+# Optional eslint cache file
+.eslintcache
+
 # Optional REPL history
 .node_repl_history
 
