docs(sanity): clarify that the personal session token (cookie) for running e2e tests needs to be got from the dev environment

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@
 PERF_STUDIO_SANITY_WRITE_TOKEN=
 
 # This is a personal session token that allows puppeteer to interact with the studio as an authenticated user
-# You can find your personal sanity token by opening devtools and inspecting cookies on any request to the sanity api
+# You can find your personal sanity token by opening devtools (while running the dev env) and inspecting cookies on any request to the sanity api
 # Open devtools, go to network tab, click on a request to the sanity api, go to the cookies tab and copy the value of
 # the `sanitySession` request cookie.
 PERF_TEST_SANITY_SESSION_TOKEN=
 
 # This is a personal session token that allows puppeteer to interact with the studio as an authenticated user
-# You can find your personal sanity token by opening devtools and inspecting cookies on any request to the sanity api
+# You can find your personal sanity token by opening devtools (while running the dev env) and inspecting cookies on any request to the sanity api
 # Open devtools, go to network tab, click on a request to the sanity api, go to the cookies tab and copy the value of
 # the `sanitySession` request cookie.
 CYPRESS_SANITY_SESSION_TOKEN=
