test(cypress) change test prefix on elements from data-cy to data-testid

--- a/packages/@sanity/desk-tool/tsconfig.json
+++ b/packages/@sanity/desk-tool/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../../tsconfig",
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../../../cypress/integration/form-builder/_e2eTest.js"],
   "compilerOptions": {
     "composite": true,
     "rootDir": "./src",
