fix(core): fix require.context shim for graphql deploys

--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -5,6 +5,14 @@
   "main": "lib/index.js",
   "author": "Sanity.io <hello@sanity.io>",
   "license": "MIT",
+  "//": "the typesVersion config below is a workaround for TypeScript's lack of support for package exports",
+  "typesVersions": {
+    "*": {
+      "*": [
+        "dist/dts/_exports/*"
+      ]
+    }
+  },
   "scripts": {
     "build": "babel src --copy-files --out-dir lib",
     "clean": "rimraf lib dest",
@@ -74,10 +82,12 @@
     "@sanity/client": "2.21.7",
     "@types/fs-extra": "^7.0.0",
     "@types/inquirer": "^6.0.2",
+    "@types/klaw-sync": "^6.0.1",
     "@types/resolve-from": "^4.0.0",
     "@types/semver": "^6.2.3",
     "chalk": "^2.4.2",
-    "inquirer": "^6.0.0"
+    "inquirer": "^6.0.0",
+    "memfs": "^3.3.0"
   },
   "repository": {
     "type": "git",
