chore: add memfs to depcheck ignore

--- a/packages/@sanity/types/.depcheckignore.json
+++ b/packages/@sanity/types/.depcheckignore.json
@@ -14,6 +14,7 @@
     "@juggle/resize-observer",
     "nano-pubsub",
     "@sanity/ui",
-    "@sanity/state-router"
+    "@sanity/state-router",
+    "memfs"
   ]
 }
