--- a/package.json
+++ b/package.json
@@ -127,7 +127,8 @@
     "stylelint": "^13.4.1",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-prettier": "^1.1.2",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "re-resizable": "^6.9.1"
   },
   "optionalDependencies": {
     "node-notifier": "^10.0.0"
