--- a/examples/clean-studio/.gitignore
+++ b/examples/clean-studio/.gitignore
@@ -7,3 +7,10 @@ coverage
 
 # Dependency directories
 node_modules
+
+# Built assets
+dist
+
+# Plugin config
+config/@sanity/default-login.json
+config/.checksums
