--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "deploy-movies": "npm run build && cd examples/movies-studio && sanity deploy",
     "lint": "npm run eslint -- .",
     "depcheck": "lerna exec \\$LERNA_ROOT_PATH/scripts/depcheck.js --no-bail --parallel",
-    "eslint": "node_modules/.bin/eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
+    "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
     "lint:fix": "eslint . --quiet --fix",
     "start": "npm run test-studio",
     "ecommerce-studio": "cd examples/ecommerce-studio && npm start",
@@ -46,7 +46,7 @@
     "versions": "node scripts/normalizeDependencyVersions.js",
     "normalize-pkgfields": "node scripts/normalizePackageFields.js",
     "prettify": "lerna run clean && npm run prettier -- --write",
-    "prettier": "node_modules/.bin/prettier '**/*.{ts,js,tsx,jsx}'",
+    "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
     "lint-next": "npm run eslint -- `git diff --name-only next --diff-filter ACMRTUXB`",
     "verify-format": "lerna run clean && npm run prettier -- -c",
     "postinstall": "node ./scripts/validateMonorepoDependencies.js && npm run bootstrap",
