--- a/package.json
+++ b/package.json
@@ -11,57 +11,57 @@
     "packages/sanity"
   ],
   "scripts": {
-    "workshop": "cd dev/workshop && yarn dev",
-    "bootstrap": "lerna bootstrap && run-s build:cli package",
-    "dev": "yarn start",
-    "rebuild": "gulp build",
-    "build": "lerna run --scope @sanity/* build",
+    "blog-studio": "cd examples/blog-studio && npm start",
+    "bootstrap": "yarn install",
+    "build-and-serve": "(cd dev/test-studio && yarn build && history-server -p 3333 -a dist)",
     "build:cli": "gulp build:cli",
     "build:js": "gulp js",
+    "build": "lerna run --scope @sanity/* build",
+    "clean-studio": "cd examples/clean-studio && npm start",
     "check:versions": "node scripts/normalizeDependencyVersions.js",
     "clean": "lerna clean && gulp clean && rimraf node_modules",
-    "publish": "yarn build && lerna publish --exact",
+    "cypress:open": "cypress open --config-file cypress/cypress.json",
+    "cypress:run": "cypress run --config-file cypress/cypress.json",
+    "depcheck": "lerna exec \\$LERNA_ROOT_PATH/scripts/depcheck.js --no-bail --parallel",
+    "deploy-movies": "yarn build && cd examples/movies-studio && sanity deploy",
+    "deploy-test": "yarn build && cd dev/test-studio && sanity deploy",
+    "design-studio": "cd dev/design-studio && npm start",
+    "dev": "yarn start",
+    "ecommerce-studio": "cd examples/ecommerce-studio && npm start",
+    "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
+    "example-studio": "cd dev/example-studio && npm start",
+    "init": "lerna clean --yes && run-s bootstrap build",
+    "lint-next": "yarn eslint `git diff --name-only next --diff-filter ACMRTUXB`",
+    "lint:fix": "eslint . --quiet --fix",
+    "lint": "yarn eslint .",
+    "movies-studio": "cd examples/movies-studio && npm start",
+    "normalize-pkgfields": "node scripts/normalizePackageFields.js",
+    "package-cli": "yarn --cwd packages/@sanity/cli build:pack",
+    "package-yarn": "yarn --cwd packages/@sanity/cli package-yarn",
+    "package": "run-s package-yarn package-cli",
+    "perf-studio": "cd dev/perf-studio && npm start",
+    "postinstall": "husky install && node ./scripts/validateMonorepoDependencies.js && run-s build:cli package",
+    "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
+    "prettify": "lerna run clean && yarn prettier --write",
     "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
     "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
     "publish-tag": "RELEASE_TAG=\"${RELEASE_TAG:-canary}\"; yarn build && lerna publish --canary --force-publish --no-git-tag-version --dist-tag=$RELEASE_TAG --preid=$RELEASE_TAG --exact",
-    "package": "run-s package-yarn package-cli",
-    "package-cli": "yarn --cwd packages/@sanity/cli pack",
-    "package-yarn": "yarn --cwd packages/@sanity/cli package-yarn",
-    "init": "lerna clean --yes && run-s bootstrap build",
-    "deploy-test": "yarn build && cd dev/test-studio && sanity deploy",
-    "deploy-movies": "yarn build && cd examples/movies-studio && sanity deploy",
-    "lint": "yarn eslint .",
-    "depcheck": "lerna exec \\$LERNA_ROOT_PATH/scripts/depcheck.js --no-bail --parallel",
-    "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
-    "lint:fix": "eslint . --quiet --fix",
+    "publish": "yarn build && lerna publish --exact",
+    "rebuild": "gulp build",
+    "release-notes": "node scripts/printReleaseNotesTemplate.js",
     "start": "yarn test-studio",
-    "ecommerce-studio": "cd examples/ecommerce-studio && yarn start",
-    "test-studio": "cd dev/test-studio && yarn start",
-    "clean-studio": "cd examples/clean-studio && yarn start",
-    "design-studio": "cd dev/design-studio && yarn start",
-    "perf-studio": "cd dev/perf-studio && yarn start",
-    "example-studio": "cd dev/example-studio && yarn start",
-    "movies-studio": "cd examples/movies-studio && yarn start",
-    "blog-studio": "cd examples/blog-studio && yarn start",
-    "stylelint": "stylelint \"**/*.css\"",
     "stylelint:fix": "stylelint \"**/*.css\" --fix",
-    "build-and-serve": "(cd dev/test-studio && yarn build && history-server -p 3333 -a dist)",
-    "test": "jest && lerna run --scope groq --scope '@sanity/{plugin-loader}' test",
+    "stylelint": "stylelint \"**/*.css\"",
     "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'yarn cypress:run'",
     "test-perf": "start-server-and-test perf-studio http://localhost:3344 'ts-node -r dotenv/config perf/suite'",
-    "updated": "lerna updated",
-    "watch": "gulp watch",
-    "release-notes": "node scripts/printReleaseNotesTemplate.js",
-    "normalize-pkgfields": "node scripts/normalizePackageFields.js",
-    "prettify": "lerna run clean && yarn prettier --write",
-    "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
-    "lint-next": "yarn eslint `git diff --name-only next --diff-filter ACMRTUXB`",
-    "verify-format": "lerna run clean && yarn prettier -c",
-    "postinstall": "husky install && node ./scripts/validateMonorepoDependencies.js && yarn bootstrap",
-    "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
+    "test-studio": "cd dev/test-studio && npm start",
+    "test": "jest && lerna run --scope groq --scope '@sanity/{client,generate-help-url,plugin-loader}' test",
     "type-check": "tsc -b",
-    "cypress:open": "cypress open --config-file cypress/cypress.json",
-    "cypress:run": "cypress run --config-file cypress/cypress.json"
+    "updated": "lerna updated",
+    "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
+    "verify-format": "lerna run clean && yarn prettier -c",
+    "watch": "gulp watch",
+    "workshop": "cd dev/workshop && yarn dev"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
