--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -46,6 +46,7 @@
     "debug": "^3.2.7",
     "deep-sort-object": "^1.0.1",
     "es6-promisify": "^6.0.0",
+    "esbuild-register": "^3.2.0",
     "execa": "^2.0.0",
     "filesize": "^3.5.6",
     "fs-extra": "^7.0.0",
