--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "private": true,
   "isSanityMonorepo": true,
   "name": "sanity",
+  "bin": {
+    "sanity-pkg-bundle": "./bin/pkg-utils bundle",
+    "sanity-pkg-transpile": "./bin/pkg-utils transpile"
+  },
   "workspaces": [
     "dev/*",
     "examples/*",
@@ -11,15 +15,11 @@
     "packages/sanity"
   ],
   "scripts": {
-    "blog-studio": "cd examples/blog-studio && npm start",
-    "bootstrap": "yarn install",
-    "build-and-serve": "(cd dev/test-studio && yarn build && history-server -p 3333 -a dist)",
-    "build:cli": "gulp build:cli",
-    "build:js": "gulp js",
+    "bootstrap": "yarn install && yarn build:cli",
     "build": "lerna run --scope @sanity/* build",
-    "clean-studio": "cd examples/clean-studio && npm start",
+    "build:cli": "lerna run --scope '@sanity/{cli,client,core,export,generate-help-url,import,mutator,server,types,util}' build",
+    "clean": "lerna run --scope @sanity/* clean && lerna clean",
     "check:versions": "node scripts/normalizeDependencyVersions.js",
-    "clean": "lerna clean && gulp clean && rimraf node_modules",
     "cypress:open": "cypress open --config-file cypress/cypress.json",
     "cypress:run": "cypress run --config-file cypress/cypress.json",
     "depcheck": "lerna exec \\$LERNA_ROOT_PATH/scripts/depcheck.js --no-bail --parallel",
@@ -27,27 +27,30 @@
     "deploy-test": "yarn build && cd dev/test-studio && sanity deploy",
     "design-studio": "cd dev/design-studio && npm start",
     "dev": "yarn start",
-    "ecommerce-studio": "cd examples/ecommerce-studio && npm start",
+    "dev:blog-studio": "yarn --cwd examples/blog-studio start",
+    "dev:clean-studio": "yarn --cwd examples/clean-studio start",
+    "dev:design-studio": "yarn --cwd dev/design-studio start",
+    "dev:ecommerce-studio": "yarn --cwd examples/ecommerce-studio start",
+    "dev:example-studio": "yarn --cwd dev/example-studio start",
+    "dev:movies-studio": "yarn --cwd examples/movies-studio start",
+    "dev:partless-studio": "yarn --cwd dev/partless-studio dev",
+    "dev:perf-studio": "yarn --cwd dev/perf-studio start",
+    "dev:test-studio": "yarn --cwd dev/test-studio start",
+    "dev:workshop": "yarn --cwd dev/workshop dev",
     "eslint": "eslint --ext=.js,.jsx,.mjs,.ts,.tsx --quiet",
     "example-studio": "cd dev/example-studio && npm start",
     "init": "lerna clean --yes && run-s bootstrap build",
-    "lint-next": "yarn eslint `git diff --name-only next --diff-filter ACMRTUXB`",
-    "lint:fix": "eslint . --quiet --fix",
     "lint": "yarn eslint .",
-    "movies-studio": "cd examples/movies-studio && npm start",
+    "lint:fix": "eslint . --quiet --fix",
+    "lint-next": "yarn eslint `git diff --name-only next --diff-filter ACMRTUXB`",
     "normalize-pkgfields": "node scripts/normalizePackageFields.js",
-    "package-cli": "yarn --cwd packages/@sanity/cli build:pack",
-    "package-yarn": "yarn --cwd packages/@sanity/cli package-yarn",
-    "package": "run-s package-yarn package-cli",
-    "perf-studio": "cd dev/perf-studio && npm start",
-    "postinstall": "husky install && node ./scripts/validateMonorepoDependencies.js && run-s build:cli package",
+    "postinstall": "husky install",
     "prettier": "prettier '**/*.{ts,js,tsx,jsx}'",
     "prettify": "lerna run clean && yarn prettier --write",
+    "publish": "yarn build && lerna publish --exact",
     "publish-canary": "RELEASE_TAG=canary yarn publish-tag",
     "publish-current-branch": "RELEASE_TAG=`git rev-parse --abbrev-ref HEAD | sed 's/\\//\\_/g'` yarn publish-tag",
     "publish-tag": "RELEASE_TAG=\"${RELEASE_TAG:-canary}\"; yarn build && lerna publish --canary --force-publish --no-git-tag-version --dist-tag=$RELEASE_TAG --preid=$RELEASE_TAG --exact",
-    "publish": "yarn build && lerna publish --exact",
-    "rebuild": "gulp build",
     "release-notes": "node scripts/printReleaseNotesTemplate.js",
     "start": "yarn dev:test-studio",
     "stylelint": "stylelint \"**/*.css\"",
@@ -59,90 +62,91 @@
     "updated": "lerna updated",
     "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
     "verify-format": "lerna run clean && yarn prettier -c",
-    "watch": "gulp watch",
-    "workshop": "cd dev/workshop && yarn dev"
+    "watch": "lerna run --parallel --scope @sanity/* watch"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
     "@babel/parser": "7.16.4",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/preset-typescript": "^7.10.4",
-    "@babel/register": "^7.7.4",
-    "@babel/runtime": "7.12.13",
-    "@sanity/client": "^3.2.0",
-    "@types/jest": "^27.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/register": "^7.16.0",
+    "@babel/runtime": "7.16.3",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.1",
+    "@sanity/client": "2.23.2",
+    "@types/cpx": "^1.5.2",
+    "@types/jest": "^27.0.3",
+    "@types/mkdirp": "^1.0.2",
     "@types/node": "^14.18.9",
     "@types/react": "^17.0.42",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.30.0",
-    "@typescript-eslint/parser": "^4.30.0",
-    "@vercel/node": "^1.8.3",
+    "@types/styled-components": "^5.1.16",
+    "@types/yargs": "^17.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "@vercel/node": "^1.12.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.1.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-istanbul": "^5.2.0",
+    "babel-jest": "^27.4.2",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "boxen": "^4.1.0",
-    "chalk": "^2.4.2",
-    "cypress": "^6.3.0",
-    "cypress-dotenv": "^1.2.2",
-    "deepmerge": "^3.3.0",
-    "del": "^5.1.0",
+    "chalk": "^4.1.2",
+    "cpx": "^1.5.0",
+    "cypress": "^9.1.1",
+    "cypress-dotenv": "^2.0.0",
+    "deepmerge": "^4.2.2",
+    "del": "^6.0.0",
     "depcheck": "^1.4.3",
-    "dotenv": "^8.2.0",
-    "esbuild": "^0.12.21",
+    "dotenv": "^10.0.0",
+    "esbuild": "^0.14.2",
     "esbuild-register": "^3.2.0",
     "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-sanity": "^5.0.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-es5": "^1.4.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-sanity": "^5.1.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-es5": "^1.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "execa": "^2.0.0",
     "git-repo-info": "^2.1.1",
-    "glob": "^7.1.2",
+    "glob": "^7.2.0",
     "globby": "^10.0.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
-    "gulp-changed": "^4.0.2",
-    "gulp-filter": "^6.0.0",
-    "gulp-newer": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-watch": "^5.0.1",
     "hard-rejection": "^2.1.0",
-    "hashids": "^2.2.8",
+    "hashids": "^2.2.10",
     "history-server": "^1.3.1",
     "husky": "^7.0.4",
-    "jest": "^27.1.0",
+    "jest": "^27.4.3",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.0.2",
-    "lodash": "^4.17.15",
+    "lint-staged": "^12.1.2",
+    "lodash": "^4.17.21",
     "merge-stream": "^2.0.0",
-    "minimist": "^1.2.0",
+    "minimist": "^1.2.5",
+    "mkdirp": "^1.0.4",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
-    "prettier": "2.1.2",
-    "puppeteer": "^11.0.0",
-    "rimraf": "^2.7.1",
-    "semver": "^6.2.3",
-    "start-server-and-test": "^1.11.7",
-    "stylelint": "^13.4.1",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-prettier": "^1.1.2",
-    "typescript": "4.5.5"
+    "prettier": "^2.5.1",
+    "puppeteer": "^12.0.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.61.1",
+    "rollup-plugin-typescript2": "^0.31.1",
+    "semver": "^7.3.5",
+    "start-server-and-test": "^1.14.0",
+    "typescript": "^4.5.2",
+    "yargs": "^17.3.0"
   },
   "optionalDependencies": {
     "node-notifier": "^10.0.0"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint"
+    "*.{js,jsx,ts,tsx}": "eslint --quiet"
   }
 }
