--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,13 @@
 {
-  "files": [],
+  "extends": "./tsconfig.settings",
+  "include": ["./babel.config.js", "./dev/aliases.js", "./scripts", "./test"],
   "compilerOptions": {
     "composite": true,
     "module": "commonjs",
     "target": "es2020",
     "lib": ["dom", "es2020"],
-    "declaration": true,
-    "declarationMap": true,
-    "emitDeclarationOnly": true,
-    "sourceMap": true,
-    "removeComments": false,
-    "preserveConstEnums": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "useUnknownInCatchVariables": false,
-    "strict": true,
-    "skipLibCheck": true
+    "allowJs": true,
+    "noEmit": true
   },
   "references": [
     {"path": "./packages/@sanity/base"},
