chore: drop plugin-loader from build scripts

--- a/package.json
+++ b/package.json
@@ -49,13 +49,12 @@
     "publish": "yarn build && lerna publish --exact",
     "rebuild": "gulp build",
     "release-notes": "node scripts/printReleaseNotesTemplate.js",
-    "start": "yarn test-studio",
-    "stylelint:fix": "stylelint \"**/*.css\" --fix",
+    "start": "yarn dev:test-studio",
     "stylelint": "stylelint \"**/*.css\"",
+    "stylelint:fix": "stylelint \"**/*.css\" --fix",
+    "test": "jest",
     "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'yarn cypress:run'",
     "test-perf": "start-server-and-test perf-studio http://localhost:3344 'ts-node -r dotenv/config perf/suite'",
-    "test-studio": "cd dev/test-studio && npm start",
-    "test": "jest && lerna run --scope groq --scope '@sanity/{client,generate-help-url,plugin-loader}' test",
     "type-check": "tsc -b",
     "updated": "lerna updated",
     "vercel-build": "yarn build:js && (cd dev/test-studio && yarn build -y)",
