--- a/packages/@sanity/core/tsconfig.json
+++ b/packages/@sanity/core/tsconfig.json
@@ -10,5 +10,5 @@
     "allowJs": true,
     "jsx": "react"
   },
-  "references": [{"path": "../server"}]
+  "references": [{"path": "../server"}, {"path": "../types"}]
 }
