--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "example-studio": "cd dev/example-studio && npm start",
     "movies-studio": "cd examples/movies-studio && npm start",
     "blog-studio": "cd examples/blog-studio && npm start",
-    "stylelint": "stylelint \"**/*.css\"",
-    "stylelint:fix": "stylelint \"**/*.css\" --fix",
+    "stylelint": "stylelint \"**/*.{css,js,ts,tsx}\"",
+    "stylelint:fix": "stylelint \"**/*.{css,js,ts,tsx}\" --fix",
     "build-and-serve": "cd dev/test-studio && npm run build && history-server -p 3333 -a dist",
     "test": "jest && lerna run --scope groq --scope '@sanity/{client,generate-help-url,plugin-loader}' test",
     "test-e2e": "start-server-and-test build-and-serve http://localhost:3333 'npm run cypress:run'",
@@ -65,6 +65,7 @@
     "@babel/register": "^7.7.4",
     "@babel/runtime": "7.12.13",
     "@sanity/client": "^2.21.10",
+    "@stylelint/postcss-css-in-js": "^0.37.2",
     "@types/jest": "^27.0.1",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
@@ -116,15 +117,16 @@
     "lodash": "^4.17.15",
     "merge-stream": "^2.0.0",
     "minimist": "^1.2.0",
+    "postcss-syntax": "^0.36.2",
     "prettier": "2.1.2",
-    "puppeteer": "^11.0.0",
     "prettier-plugin-packagejson": "^2.2.11",
+    "puppeteer": "^11.0.0",
     "rimraf": "^2.7.1",
     "semver": "^6.2.3",
     "start-server-and-test": "^1.11.7",
-    "stylelint": "^13.4.1",
-    "stylelint-config-prettier": "^8.0.1",
-    "stylelint-prettier": "^1.1.2",
+    "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-prettier": "^2.0.0",
     "typescript": "^4.4.2"
   }
 }
