--- a/packages/@sanity/core/package.json
+++ b/packages/@sanity/core/package.json
@@ -48,6 +48,7 @@
     "execa": "^2.0.0",
     "filesize": "^3.5.6",
     "fs-extra": "^7.0.0",
+    "get-it": "^5.2.1",
     "jsdom": "^12.0.0",
     "jsdom-global": "^3.0.2",
     "json-lexer": "^1.1.1",
@@ -64,7 +65,6 @@
     "rimraf": "^2.7.1",
     "rxjs": "^6.5.3",
     "semver": "^6.2.3",
-    "simple-get": "^4.0.0",
     "tar-fs": "^1.16.0",
     "terser": "^5.7.2",
     "yargs": "^16.2.0"
