feat(cli): use get-it instead of simple-get for plugin init

--- a/packages/@sanity/cli/package.json
+++ b/packages/@sanity/cli/package.json
@@ -55,6 +55,7 @@
     "execa": "^2.0.0",
     "fs-extra": "^7.0.0",
     "gauge": "^2.7.4",
+    "get-it": "^5.2.1",
     "get-latest-version": "^1.0.0",
     "git-user-info": "^1.0.1",
     "gitconfiglocal": "^2.0.1",
@@ -74,7 +75,6 @@
     "rimraf": "^2.7.1",
     "semver": "^6.2.3",
     "semver-compare": "^1.0.0",
-    "simple-get": "^4.0.0",
     "split2": "^3.2.2",
     "validate-npm-package-name": "^3.0.0",
     "webpack": "^4.14.0",
