--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -34,12 +34,13 @@
   },
   "homepage": "https://www.sanity.io/",
   "dependencies": {
-    "@vitejs/plugin-react": "^1.1.0",
+    "@originjs/vite-plugin-commonjs": "^1.0.1",
+    "@vitejs/plugin-react": "^1.1.3",
     "chalk": "^4.1.2",
     "express": "^4.17.1",
     "read-pkg-up": "^7.0.1",
     "resolve-from": "^5.0.0",
-    "vite": "^2.6.14"
+    "vite": "^2.7.2"
   },
   "devDependencies": {
     "@sanity/base": "2.29.1",
