--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react": "^1.1.3",
     "chalk": "^4.1.2",
     "express": "^4.17.1",
+    "esbuild-register": "^3.2.0",
     "read-pkg-up": "^7.0.1",
     "resolve-from": "^5.0.0",
     "vite": "^2.7.2"
@@ -49,7 +50,7 @@
     "rimraf": "^3.0.2"
   },
   "peerDependencies": {
-    "@sanity/base": "2.22.0",
+    "@sanity/base": "^2.23.0",
     "react": "^17",
     "react-dom": "^17"
   }
