--- a/packages/@sanity/server/package.json
+++ b/packages/@sanity/server/package.json
@@ -37,6 +37,7 @@
     "@originjs/vite-plugin-commonjs": "^1.0.1",
     "@vitejs/plugin-react": "^1.1.3",
     "chalk": "^4.1.2",
+    "debug": "^3.2.7",
     "express": "^4.17.1",
     "esbuild-register": "^3.2.0",
     "read-pkg-up": "^7.0.1",
