--- a/packages/@sanity/structure/package.json
+++ b/packages/@sanity/structure/package.json
@@ -18,11 +18,11 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "../../../bin/pkg-utils bundle",
+    "build": "../../../bin/pkg-utils bundle --tsconfig tsconfig.lib.json",
     "clean": "rimraf lib coverage",
     "prebuild": "yarn clean",
     "test": "jest",
-    "watch": "../../../bin/pkg-utils bundle --watch"
+    "watch": "../../../bin/pkg-utils bundle --tsconfig tsconfig.lib.json --watch"
   },
   "keywords": [
     "sanity",
@@ -43,9 +43,8 @@
     "@sanity/schema": "2.29.3",
     "@sanity/types": "2.29.5",
     "@types/lodash": "^4.14.149",
-    "@types/memoize-one": "^3.1.1",
     "lodash": "^4.17.21",
-    "memoize-one": "^3.1.1"
+    "react-is": "^17.0.2"
   },
   "devDependencies": {
     "rimraf": "^3.0.2",
