--- a/packages/@sanity/structure/tsconfig.json
+++ b/packages/@sanity/structure/tsconfig.json
@@ -1,17 +1,11 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["src"],
+  "include": ["./src", "./test"],
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
-    "rootDir": "./src/",
-    "outDir": "./lib/dts/",
-    // todo: we need to disable noImplicitAny in a transition phase and should be removed eventually
-    "noImplicitAny": false
+    "rootDir": "./",
+    "outDir": "./lib/dts/"
   },
-  "references": [
-    {
-      "path": "../initial-value-templates"
-    }
-  ]
+  "references": [{"path": "../initial-value-templates/tsconfig.lib.json"}, {"path": "../types"}]
 }
