--- a/packages/@sanity/vision/package.json
+++ b/packages/@sanity/vision/package.json
@@ -20,6 +20,7 @@
     "admin"
   ],
   "dependencies": {
+    "@juggle/resize-observer": "^3.3.1",
     "@sanity/icons": "^1.2.1",
     "@sanity/ui": "^0.37.2",
     "classnames": "^2.2.5",
