--- a/packages/@sanity/util/package.json
+++ b/packages/@sanity/util/package.json
@@ -51,11 +51,11 @@
     }
   },
   "scripts": {
-    "build": "../../../bin/pkg-utils bundle --target node",
+    "build": "../../../bin/pkg-utils bundle --target node --tsconfig tsconfig.lib.json",
     "clean": "rimraf lib",
     "prebuild": "yarn clean",
     "test": "jest",
-    "watch": "../../../bin/pkg-utils bundle --target node --watch"
+    "watch": "../../../bin/pkg-utils bundle --target node --tsconfig tsconfig.lib.json --watch"
   },
   "engines": {
     "node": ">=12.0.0"
