--- a/packages/@sanity/util/tsconfig.json
+++ b/packages/@sanity/util/tsconfig.json
@@ -1,19 +1,11 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["src/**/*"],
+  "include": ["./src", "./test", "./typings"],
   "compilerOptions": {
     "composite": true,
-    // todo: we need to disable noImplicitAny in a transition phase and should be removed eventually
-    "noImplicitAny": false,
-    "declaration": true,
     "declarationDir": "./lib/dts/",
-    "rootDir": "./src/",
-    "outDir": "./lib/dts/",
-    "emitDeclarationOnly": false
+    "rootDir": "./",
+    "outDir": "./lib/dts/"
   },
-  "references": [
-    {
-      "path": "../types"
-    }
-  ]
+  "references": [{"path": "../types"}]
 }
