--- a/packages/@sanity/core/tsconfig.lib.json
+++ b/packages/@sanity/core/tsconfig.lib.json
@@ -1,10 +1,17 @@
 {
   "extends": "../../../tsconfig.settings",
-  "include": ["./src", "./test"],
+  "include": ["./src"],
+  "exclude": [
+    "./src/**/__fixtures__/*",
+    "./src/**/__mocks__/*",
+    "./src/**/__workshop__/*",
+    "./src/**/*.test.ts",
+    "./src/**/*.test.tsx"
+  ],
   "compilerOptions": {
     "composite": true,
     "declarationDir": "./lib/dts/",
-    "rootDir": "./",
+    "rootDir": "./src/",
     "outDir": "./lib/dts/",
     "checkJs": false,
     "allowJs": true,
