--- a/.github/workflows/depcheck.yml
+++ b/.github/workflows/depcheck.yml
@@ -31,7 +31,7 @@ jobs:
       # `lib/index.js`, where `src/index.ts` gets compiled to `lib/index.js`
       - name: Build modules
         id: buildResolver
-        run: yarn gulp js
+        run: yarn build
 
       - name: Check for unused or missing dependencies
         id: depcheck
