ci: disable slack notification for now

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,12 +52,12 @@ jobs:
         run: |
           node scripts/testCli.js
 
-      - name: Notify Slack about build failure
-        if: failure() && github.ref == 'refs/heads/ui/main'
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.ACTIONS_SLACK_BOT_TOKEN }}
-        uses: voxmedia/github-action-slack-notify-build@v1
-        with:
-          channel: studio-internal
-          status: FAILED
-          color: danger
+      # - name: Notify Slack about build failure
+      #   if: failure() && github.ref == 'refs/heads/next'
+      #   env:
+      #     SLACK_BOT_TOKEN: ${{ secrets.ACTIONS_SLACK_BOT_TOKEN }}
+      #   uses: voxmedia/github-action-slack-notify-build@v1
+      #   with:
+      #     channel: studio-internal
+      #     status: FAILED
+      #     color: danger
