--- a/packages/@sanity/code-input/package.json
+++ b/packages/@sanity/code-input/package.json
@@ -26,9 +26,9 @@
     "@sanity/types": "2.24.0",
     "@sanity/ui": "^0.37.1",
     "@sanity/util": "2.24.0",
-    "brace": "^0.11.1",
+    "ace-builds": "^1.4.13",
     "lodash": "^4.17.15",
-    "react-ace": "^5.0.1"
+    "react-ace": "^9.5.0"
   },
   "devDependencies": {
     "rimraf": "^2.7.1"
