--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     {"path": "./packages/@sanity/diff"},
     {"path": "./packages/@sanity/field"},
     {"path": "./packages/@sanity/form-builder"},
+    {"path": "./packages/@sanity/generate-help-url"},
     {"path": "./packages/@sanity/google-maps-input"},
     {"path": "./packages/@sanity/imagetool"},
     {"path": "./packages/@sanity/initial-value-templates"},
